[gd_scene load_steps=4 format=2]

[ext_resource path="res://media/font/PixelOperator8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/dialog.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[node name="dialog" type="Node2D"]
script = ExtResource( 2 )
dialog = "PLACEHOLDER"

[node name="Label" type="Label" parent="."]
margin_right = 304.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="queue_free_timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="queue_free_timer" to="." method="_on_queue_free_timer_timeout"]
